// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AuthenticationStep should request mnemonic 1`] = `
<DocumentFragment>
  <form
    class="space-y-8"
    data-testid="Form"
  >
    <div
      class="space-y-8"
      data-testid="AuthenticationStep"
    >
      <div
        class="flex justify-between items-end bg-theme-background"
      >
        <div
          class="space-y-4"
        >
          <h1
            class="mb-0 text-3xl"
            data-testid="header__title"
          >
            Authenticate
          </h1>
          <div
            class="text-theme-secondary-text"
            data-testid="header__subtitle"
          >
            Enter your mnemonic passphrase to authenticate the transaction.
          </div>
        </div>
      </div>
      <fieldset
        class="FormField__FormFieldStyled-yeauwd-0 cnlnjc flex flex-col space-y-2"
      >
        <label
          class="flex mb-2 text-sm font-semibold transition-colors duration-100 FormLabel text-theme-secondary-text"
          data-testid="FormLabel"
          for="mnemonic"
        >
          Mnemonic
          <div
            class="mt-1 ml-1 w-1 h-1 rounded-full bg-theme-danger-400"
            data-testid="FormLabel__required"
          />
        </label>
        <div
          class="Input__InputWrapperStyled-wu99qs-0 fWHFgH"
        >
          <div
            class="relative flex flex-1 h-full"
          >
            <input
              class="Input__InputStyled-wu99qs-1 ioFtLo p-0 border-none bg-transparent focus:ring-0 no-ligatures w-full"
              data-testid="AuthenticationStep__mnemonic"
              name="mnemonic"
              type="password"
            />
          </div>
          <div
            class="flex items-center space-x-3 divide-x divide-theme-secondary-300 dark:divide-theme-secondary-800 text-theme-primary-300 dark:text-theme-secondary-600"
          >
            <div
              class=""
            >
              <button
                class="flex items-center justify-center w-full h-full text-2xl focus:outline-none"
                data-testid="InputPassword__toggle"
                type="button"
              >
                <div
                  class="sc-bdfBwQ fPrsah"
                  height="1em"
                  width="1em"
                >
                  <svg>
                    eye.svg
                  </svg>
                </div>
              </button>
            </div>
          </div>
        </div>
      </fieldset>
    </div>
  </form>
</DocumentFragment>
`;

exports[`AuthenticationStep should request mnemonic and second mnemonic 1`] = `
<DocumentFragment>
  <form
    class="space-y-8"
    data-testid="Form"
  >
    <div
      class="space-y-8"
      data-testid="AuthenticationStep"
    >
      <div
        class="flex justify-between items-end bg-theme-background"
      >
        <div
          class="space-y-4"
        >
          <h1
            class="mb-0 text-3xl"
            data-testid="header__title"
          >
            Authenticate
          </h1>
          <div
            class="text-theme-secondary-text"
            data-testid="header__subtitle"
          >
            Enter your mnemonic passphrase to authenticate the transaction.
          </div>
        </div>
      </div>
      <fieldset
        class="FormField__FormFieldStyled-yeauwd-0 cnlnjc flex flex-col space-y-2"
      >
        <label
          class="flex mb-2 text-sm font-semibold transition-colors duration-100 FormLabel text-theme-secondary-text"
          data-testid="FormLabel"
          for="mnemonic"
        >
          Mnemonic
          <div
            class="mt-1 ml-1 w-1 h-1 rounded-full bg-theme-danger-400"
            data-testid="FormLabel__required"
          />
        </label>
        <div
          class="Input__InputWrapperStyled-wu99qs-0 fWHFgH"
        >
          <div
            class="relative flex flex-1 h-full"
          >
            <input
              class="Input__InputStyled-wu99qs-1 ioFtLo p-0 border-none bg-transparent focus:ring-0 no-ligatures w-full"
              data-testid="AuthenticationStep__mnemonic"
              name="mnemonic"
              type="password"
            />
          </div>
          <div
            class="flex items-center space-x-3 divide-x divide-theme-secondary-300 dark:divide-theme-secondary-800 text-theme-primary-300 dark:text-theme-secondary-600"
          >
            <div
              class=""
            >
              <button
                class="flex items-center justify-center w-full h-full text-2xl focus:outline-none"
                data-testid="InputPassword__toggle"
                type="button"
              >
                <div
                  class="sc-bdfBwQ fPrsah"
                  height="1em"
                  width="1em"
                >
                  <svg>
                    eye.svg
                  </svg>
                </div>
              </button>
            </div>
          </div>
        </div>
      </fieldset>
      <fieldset
        class="FormField__FormFieldStyled-yeauwd-0 cnlnjc flex flex-col space-y-2"
      >
        <label
          class="flex mb-2 text-sm font-semibold transition-colors duration-100 FormLabel text-theme-secondary-text"
          data-testid="FormLabel"
          for="secondMnemonic"
        >
          2nd Mnemonic
          <div
            class="mt-1 ml-1 w-1 h-1 rounded-full bg-theme-danger-400"
            data-testid="FormLabel__required"
          />
        </label>
        <div
          class="Input__InputWrapperStyled-wu99qs-0 Fupog"
          disabled=""
        >
          <div
            class="relative flex flex-1 h-full"
          >
            <input
              class="Input__InputStyled-wu99qs-1 ioFtLo p-0 border-none bg-transparent focus:ring-0 no-ligatures w-full text-theme-secondary-text"
              data-testid="AuthenticationStep__second-mnemonic"
              disabled=""
              name="secondMnemonic"
              type="password"
            />
          </div>
          <div
            class="flex items-center space-x-3 divide-x divide-theme-secondary-300 dark:divide-theme-secondary-800 text-theme-primary-300 dark:text-theme-secondary-600"
          >
            <div
              class=""
            >
              <button
                class="flex items-center justify-center w-full h-full text-2xl focus:outline-none"
                data-testid="InputPassword__toggle"
                type="button"
              >
                <div
                  class="sc-bdfBwQ fPrsah"
                  height="1em"
                  width="1em"
                >
                  <svg>
                    eye.svg
                  </svg>
                </div>
              </button>
            </div>
          </div>
        </div>
      </fieldset>
    </div>
  </form>
</DocumentFragment>
`;

exports[`AuthenticationStep should show ledger waiting app screen 1`] = `
<div>
  <form
    class="space-y-8"
    data-testid="Form"
  >
    <div
      class="space-y-8"
      data-testid="AuthenticationStep"
    >
      <div
        class="mt-8 space-y-8"
      >
        <div
          class="flex justify-between items-end bg-theme-background"
        >
          <div
            class="space-y-4"
          >
            <h1
              class="mb-0 text-3xl"
              data-testid="header__title"
            >
              Ledger Wallet
            </h1>
            <div
              class="text-theme-secondary-text"
              data-testid="header__subtitle"
            >
              Connect your Ledger and confirm input.
            </div>
          </div>
        </div>
        <svg
          class="mx-auto"
        >
          waiting-ledger-device.svg
        </svg>
        <div
          class="inline-flex items-center justify-center space-x-3 w-full"
        >
          <div
            class="Spinner-sc-1tybciv-0 gzGczR"
            color="info"
          />
          <span
            class="font-semibold animate-pulse text-theme-secondary-text"
            data-testid="LedgerWaitingApp-loading_message"
          >
            Open the ARK app on your device ...
          </span>
        </div>
      </div>
    </div>
  </form>
</div>
`;

exports[`AuthenticationStep should show ledger waiting device screen 1`] = `
<div>
  <form
    class="space-y-8"
    data-testid="Form"
  >
    <div
      class="space-y-8"
      data-testid="AuthenticationStep"
    >
      <div
        class="space-y-8"
      >
        <div
          class="flex justify-between items-end bg-theme-background"
        >
          <div
            class="space-y-4"
          >
            <h1
              class="mb-0 text-3xl"
              data-testid="header__title"
            >
              Ledger Wallet
            </h1>
            <div
              class="text-theme-secondary-text"
              data-testid="header__subtitle"
            >
              Connect your Ledger and confirm input.
            </div>
          </div>
        </div>
        <svg
          class="mx-auto"
        >
          waiting-ledger-device.svg
        </svg>
        <div
          class="inline-flex items-center justify-center space-x-3 w-full"
        >
          <div
            class="Spinner-sc-1tybciv-0 gzGczR"
            color="info"
          />
          <span
            class="font-semibold animate-pulse text-theme-secondary-text"
            data-testid="LedgerWaitingDevice-loading_message"
          >
            Waiting for Ledger ...
          </span>
        </div>
      </div>
    </div>
  </form>
</div>
`;

exports[`AuthenticationStep should show only ledger confirmation 1`] = `
<DocumentFragment>
  <form
    class="space-y-8"
    data-testid="Form"
  >
    <div
      class="space-y-8"
      data-testid="AuthenticationStep"
    >
      <div
        class="flex justify-between items-end bg-theme-background"
      >
        <div
          class="space-y-4"
        >
          <h1
            class="mb-0 text-3xl"
            data-testid="header__title"
          >
            Confirm Your Transaction
          </h1>
        </div>
      </div>
      <svg
        class="my-8"
      >
        confirm-transaction-ledger-banner.svg
      </svg>
      <div
        class="mt-8 text-theme-secondary-text"
        data-testid="LedgerConfirmation-description"
      >
        Please review and verify the information on your Ledger device. Choose Accept to complete your transaction.
      </div>
      <div
        class="inline-flex items-center justify-center mt-8 space-x-3 w-full"
      >
        <div
          class="Spinner-sc-1tybciv-0 gzGczR"
          color="info"
        />
        <span
          class="font-semibold text-theme-secondary-900 dark:text-theme-secondary-600"
          data-testid="LedgerConfirmation-loading_message"
        >
          Waiting for confirmation …
        </span>
      </div>
    </div>
  </form>
</DocumentFragment>
`;
